--- a/Latihan5-DOM Test/index.html
+++ b/Latihan5-DOM Test/index.html
@@ -20,16 +20,12 @@
           <button class="yellowButton">Warna Kuning</button>
           <button class="blueButton">Warna Biru</button>
           <button class="greenButton">Warna Hijau</button>
+          <button class="acakButton">Acak Warna</button>
         </ul>
       </div>
     </div>
 
   </section>
-
-
-
-
-
 
     <script src="script.js"></script>
 </body>
