--- a/Latihan9-Image Gallery (Latihan)/index.html
+++ b/Latihan9-Image Gallery (Latihan)/index.html
@@ -39,6 +39,6 @@
         <p>Copyright @2022</p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
